2005-12-05  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/datatypes.py (converter): New baseclass
	(BaseDateTimeConverter): New baseclass for datetime.*
	(DateTimeConverter):
	(TimeConverter): New converters 

	* kiwi/ui/widgets/list.py
	(List):	Use datatype converter to convert to and from strings.
	Add some optimizations, save the converter instance and send it as an argument
	to the callbacks.
	
	* kiwi/ui/widgets/list.py (List.select_paths): New method, selects
	a list of paths.

	* kiwi/proxies.py (Proxy._setup_widgets): 
	Cleanups:
	Use consistent exception messages
	Add and use ProxyError instead of TypeError
	Add a new check to ensure that there are no unsupported
	widgets added.
	Change a warning into an exception
	(Proxy._initialize_widgets): Remove error handler,
	unused and a hack, unique clashes will be handled
	in other ways.

2005-12-03  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/test/listener.py:
	* kiwi/ui/test/player.py:

	Improve the generated output format to be readable, remove
	some old stuff.

2005-12-02  Johan Dahlin  <jdahlin@async.com.br>

	* bin/kiwi-ui-test:
	* kiwi/ui/test/__init__.py:
	* kiwi/ui/test/common.py:
	* kiwi/ui/test/listener.py:
	* kiwi/ui/test/main.py:
	* kiwi/ui/test/player.py:
	Check-in initial gui testing framework.
	A recorder, which generates code which uses a simple
	player object.

2005-12-01  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/dist.py (get_site_packages_dir): 
	New function, to handle installation of modules in the site-packages
	directory in a platform independent way.

	* setup.py (version): Use it here.
	Fixes bug #2326 (Carlos Augusto Marcicano)

2005-11-28  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/gazpacholoader.py (DataTypeProperty.save): Handle None,
	since it's now an allowed type

2005-11-26  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/widgets/list.py (List.remove): Remove the iter from the
	cache before remove the row.

2005-11-24  Henrique Romano  <henrique@async.com.br>
