@@ -1,3 +1,11 @@
+2005-12-06  Johan Dahlin  <jdahlin@async.com.br>
+
+	* kiwi/datatypes.py (BoolConverter.from_string): Do not 
+	return a function, instead call the function and return the 
+	value of it. Sigh.
+	(BoolConverter.from_string): Always return a boolean, default
+	to False
+
 2005-12-05  Johan Dahlin  <jdahlin@async.com.br>
 
 	* kiwi/datatypes.py (converter): New baseclass
